--- a/frontend/app/src/index.css
+++ b/frontend/app/src/index.css
@@ -96,6 +96,7 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
@@ -104,6 +105,7 @@ body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 #root {
@@ -112,6 +114,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 @theme inline {
