--- a/frontend/app/src/App.css
+++ b/frontend/app/src/App.css
@@ -3,6 +3,12 @@
     width: 100%;
 }
 
+/* .flex { */
+    /* display: flex;
+    height: 100%;
+    width: 100%; */
+/* } */
+
 /* Prevent autofill from changing input background color */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
